[package]
name = "diesel-database-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono"] }
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.2.1", features = ["v4"] }
diesel_migrations="2.0.0"
chrono ={version = "0.4.22",features = ["serde"]}
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
